Polish InssortPRO exercise

--- a/Exercises/Sorting/InssortPRO.html
+++ b/Exercises/Sorting/InssortPRO.html
@@ -64,7 +64,7 @@
           [userInput]
         </div>
         <div class="validator-function">
-          if (!checkAnswer(arr_size, sort_pos) && !guess[0])
+          if (!checkAnswer(arr_size) && !guess[0])
             return ""; // User did not click, and correct answer is not
 	               // initial array state
           else return checkAnswer(arr_size);
