--- a/AV/Development/ShellsortProficiency.html
+++ b/AV/Development/ShellsortProficiency.html
@@ -223,7 +223,7 @@ a.jsavsettings {
     $theArray.html(htmldata);
 
     // Log the exercise initialization
-    log_exercise_init_array(avName, initialArray);
+    log_exercise_init_array(getAVName(), initialArray);
 
     theArray = av.ds.array($theArray, {indexed: true, layout: arrayLayout.val()});
     currIncrIndex = av.variable(0);
