--- a/Exercises/Sorting/BubsortMCQworst.html
+++ b/Exercises/Sorting/BubsortMCQworst.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html data-require="math spin graphie graphie-helpers-arithmetic word-problems">
+<html data-require="math">
 <head>
-  <title>OpenDSA Insertion Sort Exercise: Multiple Choice Question  9</title>
+  <title>OpenDSA Bubble Sort Question</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
   <script type="text/javascript"
@@ -15,10 +15,10 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question"> In the worst case, the total number of comparisons for insertion sort is: </p>
-      <div class="solution"><var><code>n(n-1)/2</code></var></div>
+      <p class="question"> In the worst case, the total number of
+        comparisons for Bubble Sort is closest to: </p>
+      <div class="solution"><var><code>n^2/2</code></var></div>
         <ul class="choices">
-          <li><var><code>n(n+1)/2</code></var></li>
           <li><var><code>n</code></var></li>	 	 
           <li><var><code>n^2</code></var></li>	 	 
       </ul>
