--- a/Exercises/Sorting/InssortMCQ10.html
+++ b/Exercises/Sorting/InssortMCQ10.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-require="math spin graphie graphie-helpers-arithmetic word-problems">
+<html data-require="math">
 <head>
   <title>OpenDSA Insertion Sort Exercise: Multiple Choice Question 10</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -17,7 +17,7 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question"> In which cases are the time complexities
+      <p class="question">In which cases are the time complexities
 	the same for Insertion Sort?</p>
       <div class="solution"><var>"Worst and Average only"</var></div>
       <ul class="choices">
