--- a/Exercises/Sorting/InssortMCQstable.html
+++ b/Exercises/Sorting/InssortMCQstable.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-require="math spin graphie graphie-helpers-arithmetic word-problems">
+<html data-require="math">
 <head>
   <title>OpenDSA Insertion Sort Exercise: Multiple Choice Question 11</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -15,9 +15,9 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question">Insertion Sort is a stable sorting
-	algorithm. (A stable sorting algorithm maintains the
-	relative order of records with equal keys.)</p>
+      <p class="question">Insertion Sort (as the code is written in this
+	module) is a stable sorting algorithm. Recall that a stable sorting
+	algorithm maintains the relative order of records with equal keys.</p>
       <div class="solution"><var>"True"</var></div>
       <ul class="choices" data-category="true">
 	<li><var>"True"</var></li>
