--- a/Exercises/Sorting/BubsortMCQsorted.html
+++ b/Exercises/Sorting/BubsortMCQsorted.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>OpenDSA Insertion Sort Exercise: Multiple Choice Question 5</title>
+  <title>OpenDSA Bubble Sort Question</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
   <script type="text/javascript"
@@ -15,25 +15,22 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question"> When implementing Insertion Sort, a binary
-	search could be used to locate the position within the first <code>i-1</code>
-	records of the array into which record <code>i</code> should be
-	inserted. In this implementation, the worst case time will be:</p> 
+      <p class="question"> What is the running time of Bubble Sort
+	when the input is an array that has already been sorted? </p>
       <div class="solution"><var><code>\Theta(n^2)</code></var></div>
       <ul class="choices">
-	<li><var><code>\Theta(n \log n)</code></var></li>
 	<li><var><code>\Theta(n)</code></var></li>
 	<li><var><code>\Theta(\log n)</code></var></li>
+	<li><var><code>\Theta(n \log n)</code></var></li>	 	 
       </ul>
 	   <div class="hints">
-	   <p>The position to insert could be found in
-	     <code>\Theta (\log i)</code>, but shifting the records to
-	     makeroom for the insert will still require
-	     <code>\Theta(i)</code> time</p>
+	   <p>Each test in the inner for loop will fail because the
+	   value at position <code>i</code> is never less than the
+	   value at position <code>i-1</code>.</p>
 	   </div>
     </div> 
 
-  
+   
   </div>
 </div>
 </body>
