--- a/Exercises/Sorting/InssortMCQ12.html
+++ b/Exercises/Sorting/InssortMCQ12.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-require="math spin graphie graphie-helpers-arithmetic word-problems">
+<html data-require="math">
 <head>
   <title>OpenDSA Insertion Sort Exercise: Multiple Choice Question 11</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
