--- a/Exercises/Sorting/InssortMCQ4.html
+++ b/Exercises/Sorting/InssortMCQ4.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-require="math spin graphie graphie-helpers-arithmetic word-problems">
+<html data-require="math">
 <head>
   <title>OpenDSA Insertion Sort Exercise: Multiple Choice Question 4</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -19,11 +19,11 @@
 	search could be used to locate the position within the first <code>i-1</code>
 	records of the array into which record <code>i</code> should be inserted.
 	Using binary search will:</p>
-      <!-- The spacing is really picky because we are mixing equations --
-	-- and text in the answers. -->
+      <!-- The spacing is really picky because we are mixing equations
+	   and text in the answers. -->
       <div class="solution">
         <var>Not speed up the asymptotic running time
-becasue shifting the records to make room
+because shifting the records to make room
 for the insert will require <code>\Theta(i)</code> time</var></div>
       <ul class="choices">
 	<li><var>Speed up the asymptotic running time
@@ -32,7 +32,7 @@ in <code>\Theta(\log i)</code> time</var></li>
 	<li><var>Speed up the asymptotic running time
 because shifting the records to make room
 for the insert will require <code>\Theta(i)</code> time</var></li>
-	<li><var> "None of the above"</var></li>	  	 
+	<li><var> "None of these answers is correct"</var></li>	  	 
       </ul>
 	  <div class="hints">
 	   <p>The position at which to insert could be found in
