--- a/Exercises/Sorting/InssortMCQcostb.html
+++ b/Exercises/Sorting/InssortMCQcostb.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html data-require="math spin graphie graphie-helpers-arithmetic word-problems">
+<html data-require="math">
 <head>
-  <title>OpenDSA Insertion Sort Exercise: Multiple Choice Question 7</title>
+  <title>OpenDSA Insertion Sort Exercise: Multiple Choice Question 3</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
   <script type="text/javascript"
@@ -10,27 +10,27 @@
   <script>urlBaseOverride = "../../ODSAkhan-exercises/";</script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
-<body>
 
+<body>
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question"> What is the running time of Insertion Sort
-	when the input is an array that has already been sorted? </p>
+      <p class="question">What is the best-case time for
+	Insertionsort to sort an array of <var><code>n</code></var> records?</p>
       <div class="solution"><var><code>\Theta(n)</code></var></div>
       <ul class="choices">
 	<li><var><code>\Theta(n^2)</code></var></li>
 	<li><var><code>\Theta(\log n)</code></var></li>
-	<li><var><code>\Theta(n \log n)</code></var></li>	 	 
+	<li><var><code>\Theta(n \log n)</code></var></li>	  	 
       </ul>
-	   <div class="hints">
-	   <p>Each test in the inner for loop will fail because the
-	   value at position <code>i</code> is never less than the
-	   value at position <code>i-1</code>.</p>
-	   </div>
+	  <div class="hints">
+	   <p>The best-case cost occurs when the records are already in sorted
+	     order from lowest to highest.</p>
+	   <p>In this case, every test on the inner for loop will
+	     fail immediately, and no records will be moved.</p> 
+	  </div>
     </div> 
 
-   
   </div>
 </div>
 </body>
