--- a/Exercises/Sorting/InssortMCQsorted.html
+++ b/Exercises/Sorting/InssortMCQsorted.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html data-require="math spin graphie graphie-helpers-arithmetic word-problems">
+<html data-require="math">
 <head>
-  <title>OpenDSA Insertion Sort Exercise: Multiple Choice Question 6</title>
+  <title>OpenDSA Insertion Sort Exercise: Multiple Choice Question 7</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
   <script type="text/javascript"
@@ -16,19 +16,19 @@
   <div class="problems">
     <div id="problem-type-or-description">
       <p class="question"> What is the running time of Insertion Sort
-	when the input is an array where all record values are equal? </p> 
+	when the input is an array that has already been sorted? </p>
       <div class="solution"><var><code>\Theta(n)</code></var></div>
       <ul class="choices">
 	<li><var><code>\Theta(n^2)</code></var></li>
 	<li><var><code>\Theta(\log n)</code></var></li>
 	<li><var><code>\Theta(n \log n)</code></var></li>	 	 
       </ul>
-	  <div class="hints">
+	   <div class="hints">
 	   <p>Each test in the inner for loop will fail because the
 	   value at position <code>i</code> is never less than the
 	   value at position <code>i-1</code>.</p>
 	   </div>
-    </div> 	  
+    </div> 
 
    
   </div>
