In ShellsortProficiency, assigned click handler through JSAV to allow capture of JSAV click events, in ODSA.js added a check for JSAV controls when dynamically assigning loggers to buttons and links to prevent double logging, added a localStorage variable so we only prompt users once per visit to login, added 'type' field to av_score JSON objects, created function to check for a valid event to make it easier for developers to create their own custom logging events without breaking anything, and changed send_event_data so it can submit anonymously

--- a/AV/Development/ShellsortProficiency.html
+++ b/AV/Development/ShellsortProficiency.html
@@ -334,8 +334,7 @@ a.jsavsettings {
   
   var swapIndex;
   // register click handlers for the array indices
-  $("#profArray").on("click", ".jsavindex", function() {
-    var index = $(this).parent(".jsavarray").find(".jsavindex").index(this);
+  theArray.click(function(index) {
     av._redo = []; // clear the forward stack, should add a method for this in lib
     if (mode.value() === "SELECTING" || mode.value() === "FIRSTSELECTING") { // in selecting mode, highlight index
       if (!theArray.isHighlight(index)) {
