--- a/Exercises/Sorting/SelsortMCQcost.html
+++ b/Exercises/Sorting/SelsortMCQcost.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math spin">
 <head>
-  <title>Bubble Sort Question</title>
+  <title>Selection Sort Question</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
   <script type="text/javascript"
@@ -17,7 +17,7 @@
     <div id="problem-type-or-description">
       <div class="spin">
         <p class="question"> What is the {best|average|worst}-case time for
-	  Bubble Sort to sort an array of <var><code>n</code></var> records? </p> 
+	  Selection Sort to sort an array of <var><code>n</code></var> records? </p> 
       </div>
       <div class="solution"><var><code>\Theta(n^2)</code></var></div>
       <ul class="choices">
@@ -26,9 +26,12 @@
 	<li><var><code>\Theta(n \log n)</code></var></li>	  	 
       </ul>
 	  <div class="hints">
-	   <p>Does Bubble Sort's number of comparisons depend on the
-	      particular order of the input array?</p>
+	   <p>Does Selection Sort's order and number of comparisons
+	      depend on the particular order of the input array?</p>
 	   <p>No, it does not.</p>
+	   <p>Recall that our implementation for Selection Sort will
+              try to swap even if the current element is in its correct
+              location.
 	  </div>
     </div>
 		
