--- a/Exercises/Sorting/SelsortMCQworst.html
+++ b/Exercises/Sorting/SelsortMCQworst.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>Bubble Sort Question</title>
+  <title>Selection Sort Question</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
   <script type="text/javascript"
@@ -15,8 +15,8 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question"> In the worst case, the total number of
-        comparisons for Bubble Sort is closest to: </p>
+      <p class="question">In the worst case, the total number of
+        comparisons for Selection Sort is closest to:</p>
       <div class="solution"><var><code>n^2/2</code></var></div>
         <ul class="choices">
           <li><var><code>n</code></var></li>	 	 
