--- a/Exercises/Sorting/BubsortMCQcomplex.html
+++ b/Exercises/Sorting/BubsortMCQcomplex.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>OpenDSA Bubble Sort Exercise: Multiple Choice Question 4</title>
+  <title>Bubble Sort Question: Complexity</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
   <script type="text/javascript"
