--- a/Exercises/Sorting/SelsortMCQcomplex.html
+++ b/Exercises/Sorting/SelsortMCQcomplex.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html data-require="math spin">
+<html data-require="math">
 <head>
-  <title>Bubble Sort Question</title>
+  <title>Selection Sort Question: Complexity</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
   <script type="text/javascript"
@@ -15,23 +15,20 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <div class="spin">
-        <p class="question"> What is the {best|average|worst}-case time for
-	  Bubble Sort to sort an array of <var><code>n</code></var> records? </p> 
-      </div>
-      <div class="solution"><var><code>\Theta(n^2)</code></var></div>
+      <p class="question">In which cases are the time complexities the
+        same for Selection Sort?</p>
+      <div class="solution"><var>"Worst, average and Best"</var></div>
       <ul class="choices">
-	<li><var><code>\Theta(n)</code></var></li>
-	<li><var><code>\Theta(\log n)</code></var></li>
-	<li><var><code>\Theta(n \log n)</code></var></li>	  	 
+	<li><var>"Worst and Best"</var></li>
+	<li><var>"Best and Average"</var></li>
+	<li><var>"Worst and Average"</var></li>	  	 
       </ul>
-	  <div class="hints">
-	   <p>Does Bubble Sort's number of comparisons depend on the
-	      particular order of the input array?</p>
-	   <p>No, it does not.</p>
-	  </div>
+      <div class="hints">
+        <p>Does Selection Sort's cost vary according to the order of the
+           array input values?</p>
+        <p>No, it does not matter what order the input values have.</p>
+      </div>
     </div>
-		
   </div>
 </div>
 </body>
