Issue 104. Removed knowledgemap link.

--- a/RST/source/_themes/haiku/layout.html
+++ b/RST/source/_themes/haiku/layout.html
@@ -52,10 +52,10 @@
         {%- endif %}
         {%- block haikurel2 %}
         {%- endblock %}
-        <a  href="knowledgemap.html">|  Knowledge Map</a>
+{#        <a  href="knowledgemap.html">|  Knowledge Map</a>#}    
 {% endmacro %}
 
-
+{#  
 {% macro contact() %}  
 
       <div class="slide-out-div">
@@ -74,12 +74,12 @@
 
       </div>
 
-
 {% endmacro %}   
+#}   
+
 
 {% block content %}
 
-      {{ contact() }} 
       <div class="header">
         {%- block haikuheader %}
         {{ login() }}  
