--- a/Exercises/Sorting/SelsortMCQsorted.html
+++ b/Exercises/Sorting/SelsortMCQsorted.html
@@ -16,13 +16,13 @@
   <div class="problems">
     <div id="problem-type-or-description">
       <div class="spin">
-        <p class="question"> What is the running time of Insertion Sort
+        <p class="question"> What is the running time of Selection Sort
           when the input is an array that
           {has already been sorted|is reverse sorted|has all equal values}? </p>
       </div>
-      <div class="solution"><var><code>\Theta(n)</code></var></div>
+      <div class="solution"><var><code>\Theta(n^2)</code></var></div>
       <ul class="choices">
-	<li><var><code>\Theta(n^2)</code></var></li>
+	<li><var><code>\Theta(n)</code></var></li>
 	<li><var><code>\Theta(\log n)</code></var></li>
 	<li><var><code>\Theta(n \log n)</code></var></li>	 	 
       </ul>
