--- a/Exercises/Sorting/SelsortPRO.html
+++ b/Exercises/Sorting/SelsortPRO.html
@@ -22,13 +22,13 @@ Written by Gayathri Subramanian and Cliff Shaffer
 
   <style>
     .jsavcontainer {
-      border: 0px;
+      border: 0;
     }
     #reset { margin-right: 20px;}
   </style>
 </head>
-<body>
 
+<body>
 <script src="SelsortPRO.js"></script>
 
 <div class="exercise">
