Move question from ExchangeSort to Inssort

--- a/Exercises/Sorting/InssortSumm.html
+++ b/Exercises/Sorting/InssortSumm.html
@@ -24,5 +24,6 @@
   <div class="exercise" data-name="InssortMCQwhena"></div>
   <div class="exercise" data-name="InssortMCQwhenb"></div>
   <div class="exercise" data-name="InssortMCQworst"></div>
+  <div class="exercise" data-name="InssortMCQinver"></div>
 </body>
 </html>
