--- a/Exercises/Sorting/ShellsortMCQ3.html
+++ b/Exercises/Sorting/ShellsortMCQ3.html
@@ -1,43 +1,39 @@
 <!DOCTYPE html>
-<html data-require="math spin">
+<html data-require="math">
 <head>
-  <title>OpenDSA Shell Sort Exercise: Multiple Choice Question 3</title>
+  <title> Shellsort Multiple Choice Question 3</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
-<script type="text/javascript"
+  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
+  <script type="text/javascript"
    src="http://cdn.mathjax.org/mathjax/1.1-latest/MathJax.js?config=http://algoviz.org/OpenDSA/ODSAkhan-exercises/KAthJax-77111459c7d82564a705f9c5480e2c88.js">
-</script>
+  </script>
   <script>urlBaseOverride = "../../ODSAkhan-exercises/";</script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
-  <script src="../../JSAV/build/JSAV-min.js"></script>
-  <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
 </head>
-<body>
 
+<body>
   <div class="exercise">
     <div class="vars">
+      <var id="NUM">randRange(18, 32)</var>
     </div>
     <div class="problems">
       <div id="problem-type-or-description">
-        <p class="question">
-	  Which is the divide-by-twos increment series for an array of 32 elements?
-	</p>
+        <p class="question">Which is the divide-by-twos increment series for an array of <var>NUM</var> elements?</p>
         <div class="solution"><var>"16, 8, 4, 2, 1"</var></div>
 	<ul class="choices" data-show="4" data-none="true">
 	  <li><var>"8, 4, 2, 1"</var></li>
 	  <li><var>"16, 8, 4, 2, 1"</var></li>
-	  <li><var>"32, 4, 1"</var></li>
+	  <li><var>"<var>NUM</var>, 4, 1"</var></li>
 	  <li><var>"16, 4, 1"</var></li>
-	  <li><var>"More than one of these."</var></li>
-	</ul>
-	<div class="hints">
-	  <p>The first increment must be a power of 2 that generates
-	  sublists with two elements.</p>
-	  <p>Each succeeding increment must be half the size of the
-	  previous one.</p>
-	</div>
+	  <li><var>"More than one of these"</var></li>
+        </ul>
+        <div class="hints">
+          <p>The first increment must be a power of 2 that generates
+             sublists with two elements.</p>
+          <p>Each succeeding increment must be half the size of the
+             previous one.</p>
+         </div>
       </div>
-      
     </div>
   </div>
 </body>
