--- a/Exercises/Sorting/ShellsortFindsub.html
+++ b/Exercises/Sorting/ShellsortFindsub.html
@@ -7,7 +7,7 @@ Written by Gayathri Subramanian and Cliff Shaffer
 <html data-require="math">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>FindSubList</title>
+  <title>Find a Shellsort Sublist</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
   <script src="../../JSAV/lib/jquery.transform.light.js"></script>
@@ -28,7 +28,47 @@ Written by Gayathri Subramanian and Cliff Shaffer
 </head>
 
 <body>
-<script src="ShellsortFindsub.js"></script>
+<script>
+var
+  jsav,       // The JSAV object
+  jsavArr,    // The array that the user manipulates (JSAV object)
+  userInput;  // Boolean: Tells us if user ever did anything
+
+// Click event handler on the array
+var clickHandler = function (index, e) {
+  if (jsavArr.isHighlight(index)) {
+    jsavArr.unhighlight(index);
+  }
+  else {
+    jsavArr.highlight(index);
+  }
+  userInput = true;
+};
+
+// Initialise the exercise
+var initJSAV = function (arr_size) {
+  userInput = false;
+  jsav = new JSAV("jsav", {"animationMode": "none"});
+  jsavArr = jsav.ds.array(JSAV.utils.rand.numKeys(0, 999, arr_size),
+                          {indexed: true, center: false});
+  // bind the clickHandler to handle click events on the array
+  jsavArr.click(clickHandler);
+};
+
+// validate student's answer
+var checkAnswer = function (start_pos, inc_size) {
+  var i;
+  for (i = 0; i < jsavArr.size(); i++) {
+    if ((i >= start_pos) && (((i - start_pos) % inc_size) === 0)) {
+      if (!jsavArr.isHighlight(i)) { return false; }
+    }
+    else {
+      if (jsavArr.isHighlight(i)) { return false; }
+    }
+  }
+  return true;
+};
+</script>
 
 <div class="exercise">
   <div class="vars">
@@ -54,7 +94,7 @@ Written by Gayathri Subramanian and Cliff Shaffer
 	  if (!guess[0])
             return ""; // User did not click anything
           else
-            return checkAnswer (arr_size,start_pos,inc_size);
+            return checkAnswer (start_pos,inc_size);
 	</div>
       </div>
       <div class="hints">
