Added a summary question at end for full chapter

--- a/Exercises/Sorting/BubsortMCQwhen.html
+++ b/Exercises/Sorting/BubsortMCQwhen.html
@@ -16,7 +16,7 @@
   <div class="problems">
     <div id="problem-type-or-description">
       <p class="question">When is Bubblesort a good choice for sorting an array?</p>
-      <div class="solution"><var>"None of these situations"</var></div>
+      <div class="solution"><var>"There is no situation where Bubblesort is the best choice over all of the others in this chapter"</var></div>
       <ul class="choices">
 	<li><var>"Each component of the array requires a large amount of memory"</var></li>
 	<li><var>"Each component of the array requires a small amount of memory"</var></li>
